feat: http-step 4
- echo resolver 구현
- Response에 Body를 추가할 수 있도록 Header 및 관련 데이터 추가